--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
+
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -26,6 +28,8 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
 
+   <!-- my styles -->
+  <link rel="stylesheet" href="css/index.css">
   <!--[if lt IE 9]>
   <script>
   (function(){
@@ -46,7 +50,7 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="root"></div>
+  <div id="root" class="container-fluid"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
